deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-site
  namespace: profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile-site
  template:
    metadata:
      labels:
        app: profile-site
    spec:
      containers:
        - name: profile-site
          image: nginx:stable-alpine # will be overridden by Kustomize
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
