deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-site
  namespace: profile
spec:
  selector:
    app: profile-site
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
